# osu-mania-replay-renderer

./: .gitignore  README.md  beatmap_parser.py  gui.py  main.py  osu-mania-replay-renderer-fastgpu.spec  osu_finder.py  pyproject.toml  renderer.py  replay_parser.py  requirements.txt  settings.py  skin_loader.py
.github/workflows/: release.yml  scheduled-release.yml  tests.yml
docs/: renderer_architecture.md
packaging/linux/: AppRun  osu-mania-replay-renderer.desktop
scripts/: publish_release.py
src/osu_mania_replay_renderer/: __init__.py  __main__.py  beatmap_parser.py  bundled_skins.py  fast_gpu_renderer.py  gpu_compositor.py  gui.py  layout_editor.py  layout_model.py  main.py  osu_db_reader.py  osu_finder.py  renderer.py  renderer_media.py  replay_parser.py  scoring.py  settings.py  skin_loader.py  updater.py  version.py
src/osu_mania_replay_renderer/bundled_skins/Cawolo skin new Max/: skin.ini
src/osu_mania_replay_renderer/bundled_skins/Nico69_ v4/: skin.ini
tests/: test_services.py
